--- a/artistry.html
+++ b/artistry.html
@@ -181,7 +181,7 @@
 
   <!--Gallery Items Copy and Paste to add Additional-->
 
-    <div class="gallery-item" data-medium="Mixed-Media" data-date="2024">
+    <div class="gallery-item" data-medium="Acrylic" data-date="2016">
       <img src="https://raw.githubusercontent.com/sknipp-pvcc/sknipp-pvcc.github.io/main/apoth.jpg" alt="Apothecary Painting" onclick="openLightbox(this.src)" />
       <div class="caption">Apothecary Painting • Mixed Media • 2024</div>
     </div>
@@ -225,9 +225,9 @@
       <img src="https://raw.githubusercontent.com/sknipp-pvcc/sknipp-pvcc.github.io/main/posiden.jpg" alt="Poseidon" onclick="openLightbox(this.src)" />
       <div class="caption">Poseidon • Acrylic on Masonite • 2019</div>
     </div>
-   <div class="gallery-item" data-medium="Acrylic" data-date="2019">
+   <div class="gallery-item" data-medium="Pencil" data-date="2021">
       <img src="https://raw.githubusercontent.com/sknipp-pvcc/sknipp-pvcc.github.io/main/7.jpg" alt="Covid" onclick="openLightbox(this.src)" />
-      <div class="caption">Covid• Pencil on Paper • 2019</div>
+      <div class="caption">Covid • Pencil on Paper • 2021</div>
     </div>
  <div class="gallery-item" data-medium="Pencil" data-date="2019">
       <img src="https://raw.githubusercontent.com/sknipp-pvcc/sknipp-pvcc.github.io/main/markmaking finish.JPG" alt="StillLife" onclick="openLightbox(this.src)" />
@@ -241,9 +241,9 @@
       <img src="https://raw.githubusercontent.com/sknipp-pvcc/sknipp-pvcc.github.io/main/seawench.jpg" alt=" SeaWitch" onclick="openLightbox(this.src)" />
       <div class="caption">Sea Witch • Arylic on Masonite • Unknown</div>
     </div>
- <div class="gallery-item" data-medium="Acrylic" data-date="Unknown">
+ <div class="gallery-item" data-medium="Acrylic" data-date="2011">
       <img src="https://raw.githubusercontent.com/sknipp-pvcc/sknipp-pvcc.github.io/main/selfpor1.jpg" alt="Self Portrait" onclick="openLightbox(this.src)" />
-      <div class="caption">Self Portrait • Acrylic • Unknown</div>
+      <div class="caption">Self Portrait • Acrylic • 2011</div>
     </div>
  <div class="gallery-item" data-medium="Acrylic" data-date="2017">
       <img src="https://raw.githubusercontent.com/sknipp-pvcc/sknipp-pvcc.github.io/main/ship1.jpg" alt="StillLife" onclick="openLightbox(this.src)" />
