--- a/artistry.html
+++ b/artistry.html
@@ -155,6 +155,7 @@
       <option value="Pencil">Pencil</option>
       <option value="Floral">Floral</option>
       <option value="Photography">Photography</option>
+       <option value="Pen and Ink">Pen and Ink</option>
 
     </select>
 
@@ -229,9 +230,9 @@
       <img src="https://raw.githubusercontent.com/sknipp-pvcc/sknipp-pvcc.github.io/main/7.jpg" alt="Covid" onclick="openLightbox(this.src)" />
       <div class="caption">Covid • Pencil on Paper • 2021</div>
     </div>
- <div class="gallery-item" data-medium="Pencil" data-date="2019">
+ <div class="gallery-item" data-medium="Pen and Ink" data-date="2019">
       <img src="https://raw.githubusercontent.com/sknipp-pvcc/sknipp-pvcc.github.io/main/markmaking finish.JPG" alt="StillLife" onclick="openLightbox(this.src)" />
-      <div class="caption">Still Life • Pencil on Paper • 2019</div>
+      <div class="caption">Still Life • Pen and Ink • 2019</div>
     </div>
  <div class="gallery-item" data-medium="Floral" data-date="Unknown">
       <img src="https://raw.githubusercontent.com/sknipp-pvcc/sknipp-pvcc.github.io/main/handwreath.jpg" alt="HandWreath" onclick="openLightbox(this.src)" />
