--- a/artistry.html
+++ b/artistry.html
@@ -162,6 +162,14 @@
     <label for="dateFilter">Date:</label>
     <select id="dateFilter">
       <option value="">All</option>
+      <option value="2014">2006</option>
+      <option value="2014">2007</option>
+      <option value="2014">2008</option>
+      <option value="2014">2009</option>
+      <option value="2014">2010</option>
+      <option value="2014">2011</option>
+      <option value="2014">2012</option>
+      <option value="2014">2013</option>
       <option value="2014">2014</option>
       <option value="2015">2015</option>
       <option value="2015">2016</option>
@@ -244,7 +252,7 @@
     </div>
  <div class="gallery-item" data-medium="Acrylic" data-date="2011">
       <img src="https://raw.githubusercontent.com/sknipp-pvcc/sknipp-pvcc.github.io/main/selfpor1.jpg" alt="Self Portrait" onclick="openLightbox(this.src)" />
-      <div class="caption">Self Portrait • Acrylic • 2011</div>
+      <div class="caption">Self Portrait • Acrylic • 2010</div>
     </div>
  <div class="gallery-item" data-medium="Acrylic" data-date="2017">
       <img src="https://raw.githubusercontent.com/sknipp-pvcc/sknipp-pvcc.github.io/main/ship1.jpg" alt="StillLife" onclick="openLightbox(this.src)" />
