--- a/Resume.html
+++ b/Resume.html
@@ -272,6 +272,50 @@
     </div>
 
 
+<!--Copy and past this for each job from here-->
+    <div class="experience-item">
+  <p class="label">Company:</p>
+  <p><strong>Goodman Allen Donnelly via Robert Half</strong></p>
+
+  <p class="label">Location:</p>
+  <p>Charlottesville, VA</p>
+
+  <p class="label">Dates:</p>
+  <p>Oct 2025 – Current</p>
+
+  <p class="label">Role:</p>
+  <p>Intake Manager - Temporary</p>
+
+  <p class="label">Duties:</p>
+  <ul>
+      <li>Serve as the primary point of contact for inbound calls, assessing caller needs and determining potential client eligibility</li>
+      <li>Collect, enter, and maintain prospective client information within Lawmatics, ensuring accuracy and compliance with firm intake requirements</li>
+      <li>Assist prospective clients with submitting required documentation via email, text, and fax to streamline the intake process</li>
+      <li>Actively redesign and optimize the intake workflow to reduce friction and improve turnaround time for potential clients</li>
+      <li>Update and configure Lawmatics intake forms and processes to better align with firm needs; provide training and guidance to staff on newly implemented changes</li>
+      <li>Participate in ongoing marketing meetings to collaborate on intake strategy and alignment between intake software and the firm’s website (WordPress-based)</li>
+      <li>Contribute to the standardization and ongoing refinement of the call center intake script to improve clarity, reduce call time, and support a consistent client experience across internal and outsourced call handling</li>      
+      <li>Identify process and system needs within Zoom Phone / Zoom Workspace and collaborate with appropriate stakeholders to support improvements such as outgoing caller ID for enhanced professionalism and call recognition</li>
+      <li>Propose and help coordinate a dedicated Microsoft Teams marketing channel, supporting organization of planning documents, files, and cross-team communication</li> 
+      <li>Contribute to marketing strategy discussions and logistical planning for multiple ongoing and proposed marketing initiatives</li>
+      <li>Regularly provide process improvement recommendations, balancing operational needs with client experience and staff usability</li>
+  </ul>
+
+
+
+  <p class="label" style="color: #ffb100;">Skills:</p>
+  <ul style="color: #ffb100;">
+    <li>Client Intake & Eligibility Screening</li>
+    <li>Process Improvement / Workflow Optimization</li>
+    <li>Lawmatics (Legal CRM)</li>
+    <li>Cross-functional Collaboration</li>
+    <li>Client Communications</li>
+
+  </ul>
+</div>
+<!--To here-->
+
+
 
 <!--Copy and past this for each job from here-->
     <div class="experience-item">
@@ -310,6 +354,9 @@
   </ul>
 </div>
 <!--To here-->
+
+
+
 <!--Copy and past this for each job from here-->
     <div class="experience-item">
   <p class="label">Company:</p>
@@ -326,10 +373,10 @@
 
   <p class="label">Duties:</p>
   <ul>
-    <li>-Organized and tracked staff expense reports for client billing and internal audits</li>
-    <li>-Compiled documentation for reimbursable invoicing and financial reporting</li>
-    <li>-Procured and maintained state licensure compliance for architects and the firm</li>
-    <li>-Supported travel arrangements for project teams and leadership</li>
+    <li>Organized and tracked staff expense reports for client billing and internal audits</li>
+    <li>Compiled documentation for reimbursable invoicing and financial reporting</li>
+    <li>Procured and maintained state licensure compliance for architects and the firm</li>
+    <li>Supported travel arrangements for project teams and leadership</li>
   </ul>
 
   <p class="label" style="color: #ffb100;">New Skills Acquired:</p>
@@ -359,10 +406,10 @@
 
   <p class="label">Duties:</p>
   <ul>
-  <li>-Managed travel bookings and meeting logistics, including catering and supplies</li>
-  <li>-Ordered and inventoried office, architectural, and janitorial supplies</li>
-  <li>-Handled front desk reception, phone systems, and visitor management</li>
-  <li>-Maintained daily office functions including mail handling and workspace upkeep</li>
+  <li>Managed travel bookings and meeting logistics, including catering and supplies</li>
+  <li>Ordered and inventoried office, architectural, and janitorial supplies</li>
+  <li>Handled front desk reception, phone systems, and visitor management</li>
+  <li>Maintained daily office functions including mail handling and workspace upkeep</li>
   </ul>
 
   <p class="label" style="color: #ffb100;">Skills:</p>
@@ -415,7 +462,7 @@
   <li>Adjusted digital files to modify print output (e.g., font, color, and layout adjustments)</li>  
   <li>Conducted routine quality checks during print runs to ensure accuracy and consistency</li>
   <li>Folded, packaged, and tagged finished articles for delivery</li>
-  <li>-Maintained production logs and followed job orders for batch output</li>
+  <li>Maintained production logs and followed job orders for batch output</li>
   </ul>
 
   <p class="label" style="color: #ffb100;">Skills:</p>
