--- a/Resume.html
+++ b/Resume.html
@@ -252,7 +252,7 @@
     <a href="#skills">Skills</a>
     <a href="#portfolio">Portfolio</a>
     <a href="#additional">Additional Credentials</a>
-    <a href="resume.pdf">Download PDF</a>
+    <!-- <a href="resume.pdf">Download PDF</a> (This doesn't work at the moment, fix it later)-->
   </div>
 
   <div class="main-content">
